# mementoai

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: analyst.md  backend-developer.md  documenter.md  frontend-developer.md
.claude/commands/: code-cleanup.md  fix-bug.md  new-component.md  new-endpoint.md
.github/: copilot-instructions.md
.github/instructions/: ai-pipeline.instructions.md  backend-instructions.md  frontend.instructions.md
.github/prompts/: brief-authentication-authorization.prompt.md  code-review-cleanup.prompt.md  fix-bug.prompt.md  new-component.prompt.md  new-endpoint.prompt.md  plan-authenticationAuthorization.prompt.prompt.md  plan-mementoAiUiDevelopment.prompt.md  plan-uiRestyling.prompt.md  update-docs.prompt.md
app/: config.py  main.py
app/db/: chunks_mongo.py  chunks_repository.py  client.py  entry_repository.py  mongo.py  users_mongo.py
app/dependencies/: auth.py  entries.py  project.py
app/handlers/: config_handlers.py
app/mappers/: entry_mapper.py
app/models/: agent.py  chat.py  chunk.py  config.py  entry.py  folder.py  project.py  search.py  types.py  user.py
app/observability/: __init__.py  langfuse_integration.py
app/routers/: admin.py  agent.py  auth.py  chat.py  entries.py  folders.py  project.py  search.py  users.py
app/services/: agent.py  agent_registry.py  agent_tools.py  auth.py  chat_service.py  classifier.py  embedding.py  entry_service.py  ollama.py  rag.py  search_service.py
docs/: architecture.md  copilot-instructions.md  frontend-spec.md  theming.md
infra/: docker-compose.yaml  docker_mongo.py  start.py  stop.py
scripts/: seed.py  seed_config.py  seed_entries.py  seed_project.py  seed_users.py
ui/: .gitignore  index.html  package-lock.json  package.json
(+106 files in other folders)
