[project]
name = "mementoai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "pymongo[srv]>=4.16.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.41.0",
]
